Product upsert action part 2

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/BulkyBook/wwwroot/images/products/2cce513d-f20f-48a5-a29f-d720cc7fcd60.png
+/BulkyBook/wwwroot/images/products/6cf7c047-5e55-4369-9daf-c3d8ada953b2.png
