Setup email options

--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "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",
+  "SendGridUser": "PhilipHassialis"
 }
