Configure session in project

--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 healthchecksdb
 /BulkyBook/wwwroot/images/products/2cce513d-f20f-48a5-a29f-d720cc7fcd60.png
 /BulkyBook/wwwroot/images/products/6cf7c047-5e55-4369-9daf-c3d8ada953b2.png
+/BulkyBook/wwwroot/images/products/6215d8f3-68aa-4857-9fa5-be45235c80b2.jpg
