--- a/BulkyBook/BulkyBook.csproj
+++ b/BulkyBook/BulkyBook.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Stripe.net" Version="37.8.0" />
+    <PackageReference Include="Twilio" Version="5.44.0" />
   </ItemGroup>
 
   <ItemGroup>
